# youtube-mp3-downloader

./: .gitignore  CLAUDE.md  README.md  com.github.sebasalas.youtube-mp3-downloader.yml  install.sh  pyproject.toml  uninstall.sh  youtube-mp3-downloader.desktop.template  youtube_mp3_downloader.py
.github/workflows/: ci.yml
tests/: test_config.py  test_utils.py
youtubemp3downloader/: app_window.py  config.py  dialogs.py  download.py  exceptions.py  logger.py  main.py  utils.py
