[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-mp3-downloader"
version = "1.0.0"
description = "GTK 3.0 desktop app to download YouTube videos as MP3 using yt-dlp"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "yt-dlp",
    "PyGObject",
]

[project.scripts]
youtube-mp3-downloader = "youtubemp3downloader.main:main"

[project.urls]
Repository = "https://github.com/sebasalas/youtube-mp3-downloader"

[tool.setuptools.packages.find]
include = ["youtubemp3downloader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist"]
